# Burst

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md  example.env
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: build.yml  clippy.yml  verify-formatting.yml
src/: client.rs  data.rs  error_handler.rs  handlers.rs  main.rs  types.rs  util.rs  utils.rs
src/commands/: config.rs  help.rs  mod.rs  ping.rs
src/commands/misc/: help.rs  mod.rs  ping.rs
src/commands/owner/: mod.rs  sync_app_commands.rs
src/handlers/: dynamic_prefix.rs  event.rs  mod.rs  on_error.rs  post_command.rs  pre_command.rs  setup.rs
