[package]
name = "burst"
description = "Blazing fast Discord music bot written in Rust using Serenity and Poise 🚀"
authors = ["RGBCube"]
version = "0.0.1"
license = "AGPL"
edition = "2021"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "builder",
    "cache",
    "collector",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "time",
    "utils",
    "voice",
    "temp_cache",
    "rustls_backend",
]

[dependencies.poise]
version = "0.5.2"
default-features = false
features = [
    "chrono",
    "cache",
    "time",
    "collector"
]

[dependencies.songbird]
version = "0.3.0"
# TODO: More specific features.
