[package]
name = "burst"
description = "Blazing fast Discord music bot written in Rust using Serenity, Poise and Songbird 🚀"
authors = ["RGBCube"]
version = "0.0.1"
license = "AGPL"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.10.0"

[dependencies.tokio]
version = "1.12.0"
features = [
    "full",
]

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "builder",
    "cache",
    "collector",
    "client",
    "gateway",
    "http",
    "model",
    "time",
    "utils",
    "voice",
    "temp_cache",
    "rustls_backend",
]

[dependencies.poise]
version = "0.5.2"
default-features = false
features = [
    "chrono",
    "cache",
    "time",
    "collector",
]

[dependencies.songbird]
version = "0.3.0"
# TODO: More specific features.
